--- a/src/newdashboardUser/usersNavigationFolder/UsersTopNavigation.css
+++ b/src/newdashboardUser/usersNavigationFolder/UsersTopNavigation.css
@@ -1,35 +1,52 @@
-.nav-user-top{
-   background-color: #44ce6f;
-   height: 70px;
-   position: relative; 
-   width: 100%;
-}
-.me{
-    display: inline;
-    margin-top: 30px;
-    margin-left: 20px;
-    font-size: 20px;
+
+
+div.user-navigation-wrapper {
+  background-color: #44ce6f;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-width: 390px;
+  width: 100vw;
 }
 
-.profile-container{
-    position: absolute; 
-    right: 50px; 
-    top: 10px;
+.logo-wrapper {
+  display: flex;
+  align-items: center;
+  padding-left: 0.5rem;
 }
 
-.profile{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 30px;
+button.burgger-icon-wrapper {
+  border: none;
+  background-color: transparent;
+  padding-right: 0.785rem;
+}
+button.burgger-icon-wrapper > svg {
+  height: 1.5rem;
+  width: 1.5rem;
 }
 
-.opt-center{
-    text-align: center;
+div.profile-image-wrapper {
+  display: none;
+}
+div.profile-image-wrapper img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-@media screen and (max-width: 415px) {
-    .profile-container {
-        right: 1;
-    }
+@media screen and (min-width: 768px) {
+  button.burgger-icon-wrapper {
+    display: none;
+  }
+
+  div.profile-image-wrapper {
+    display: flex;
+    align-items: center;
+    margin-right: 2.5rem;
+  }
+  div.profile-image-wrapper span {
+    padding-left: .7rem;
+    font-size: 1.3rem;
+  }
 }
