--- a/src/driversDashboard/DritopNav.css
+++ b/src/driversDashboard/DritopNav.css
@@ -20,7 +20,12 @@
 
 .d_burger-container {
     margin-left: 1rem;
-    font-size: 1.3rem;
+    background-color: transparent;
+    border: none;
+}
+.d_burger-container > svg {
+    width: 22px;
+    height: 22px;
 }
 
 .d_top-nav-right {
@@ -34,7 +39,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-     object-fit: cover;
+    object-fit: cover;
 }
 
 .d_top-nav-name {
