--- a/src/driversPages/AddOffer/AddOffer.css
+++ b/src/driversPages/AddOffer/AddOffer.css
@@ -1,4 +1,4 @@
-.addoffer-wrapper {
+/* .addoffer-wrapper {
     padding-top: 0.5rem;
     padding-left: 1rem;
 }
@@ -57,4 +57,4 @@ header.add-offer-title-wrapper {
         width: 10rem;
         
     }
-}
+} */
