--- a/src/Utility/TextInput/Input.css
+++ b/src/Utility/TextInput/Input.css
@@ -2,11 +2,21 @@
 
 .input-wrapper {
   display: block;
-  padding: 0.5rem 0.875rem;
+  padding: 0.75rem;
   width: 100%;
+  border: 2px solid #f0f0f0;
+  border-radius: 0.25rem;
+  font-size: 0.875rem;
+  font-family: inherit;
+}
+
+.input-wrapper:focus {
+  outline: none;
+  border-color: #44ce6f;
+  box-shadow: 0 0 10px #44ce6f;
 }
 
 .label-wrapper {
-    font-size: 1.15rem;
-    color: #a5a5a5;
+  font-size: 1.15rem;
+  color: #a5a5a5;
 }
