modify addOffer component and created addOffer page

--- a/src/components/Dashboard/DriverDashboard/EditOffer/EditOffer.css
+++ b/src/components/Dashboard/DriverDashboard/EditOffer/EditOffer.css
@@ -1,4 +1,4 @@
-.edit-offer-container-modal {
+/* .edit-offer-container-modal {
     position: fixed;
     box-shadow: 0px 12px 30px 6px rgba(66, 113, 164, 0.104891);
     background-color: rgba(255, 255, 255, 0.4);
@@ -37,22 +37,21 @@
 }
 .update-action button:hover {
     cursor: pointer;
+} */
+
+.edit-modal-input label {
+    color: #000;
+    font-size: 1.3rem;
+    font-weight: 500;
 }
 
 .update {
     background-color: gold;
 }
-.cancel {
-    background-color: #44ce6f;
-}
+
 @media screen and (min-width: 768px) {
-    .edit-offer-inputs-container input, label {
-        width: 50%;
-        max-width: 28rem;
-    }
-    .edit-offer-inputs-container label {
-        width: 50%;
-        max-width: 28rem;
-        
+    .edit-offer-wrapper{
+        margin: 0 auto;
+        width: 55%;
     }
 }
