--- a/src/components/LandingPage/Account/DriverSignup/DriverSignup.css
+++ b/src/components/LandingPage/Account/DriverSignup/DriverSignup.css
@@ -6,7 +6,7 @@
 }
 
 .signup-bg {
-  background-image: url("https://www.pickmeup.ng/wp-content/uploads/2018/04/driver-banner1.png");
+  background-image: url("/src/assest/driver-banner1.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -66,36 +66,3 @@
     color: #44ce6f;
     font-size: 1.2rem;
 }
-
-/*
-.drivers-sign-in {
-    background-color: white;
-    border-radius: 7px;
-    display: block;
-    overflow: hidden;
-    box-shadow: 0px 12px 30px 6px rgba(66, 113, 164, 0.104891);
-    width: 437px;
-    margin: 1% auto;
-    max-width: 100%;
-    height: 730px;
-    position: relative;
-}
-
-.Sign-btn-pilot {
-    width: 100%;
-    font-family: inherit;
-    font-size: 18px;
-    padding: 10px;
-    border-radius: 17px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    cursor: pointer;
-    color: white;
-    background-color: #44ce6f;
-    list-style: none;
-    outline: none;
-    border: none;
-    transition: color 1000ms;
-    transition: background-color 500ms ease-in-out;
-    margin-top: 2rem;
-}
- */
