--- a/src/userdashboardPages/UserSetting.css
+++ b/src/userdashboardPages/UserSetting.css
@@ -1,4 +1,4 @@
-.user__profile__container {
+/* .user__profile__container {
     border: 1px solid black;
     width: 70%;
     margin: 5% auto;
@@ -50,4 +50,4 @@ div.user__profile__header {
         width: 100%;
     }
 
-}
+} */
