--- a/src/Utility/MyProfile/myProfile.css
+++ b/src/Utility/MyProfile/myProfile.css
@@ -2,7 +2,7 @@
 
 .my-profile-wrapper {
   width: 100%;
-  max-width: 768px;
+  max-width: 900px;
   margin: 5% auto;
   padding: 4rem 0;
 }
@@ -11,7 +11,7 @@
   -moz-box-shadow: 3px 7px 43px 1px rgba(0, 0, 0, 0.43);
   box-shadow: 3px 7px 43px 1px rgba(0, 0, 0, 0.43);
   background-color: #fff;
-  max-width: 500px;
+  max-width: 768px;
   padding: .6rem .5rem;
   margin: 0 auto;
   border-radius: 5px;
@@ -19,7 +19,7 @@
 
 .my-profile-info {
     width: 100%;
-    max-width: 490px;
+    max-width: 700px;
     outline: 1px solid #44ce6f;;
     margin: 0 auto;
     border-radius: 4px;
@@ -63,4 +63,16 @@
    border-radius: 4px;
    background-color: #44ce6f;
    color: #000;
+}
+
+@media screen and (min-width: 768px) {
+    .edit-profile-action{
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 600px;
+    }
+    .user-information * {
+        font-weight: 400;
+        font-size: 20px;
+    }
 }
